# HipaccVX

./: .gitignore  CMakeLists.txt  HipaVX.files  HipaVX.includes  LICENSE.txt  Makefile  README.md  cpp_helper.hpp  hipacc_helper.hpp  main.cpp
VX/: vx.h  vx_api.h  vx_compatibility.h  vx_kernels.h  vx_nodes.h  vx_types.h  vxu.h
VX/hipaVX/: config_reader.cpp  config_reader.hpp  hipaVX.cpp  hipaVX.hpp  hipaVX_extension.hpp  hipaVX_hipacc_generator.cpp  hipaVX_hipacc_generator.hpp  hipaVX_internal.cpp  hipaVX_internal.hpp  hipaVX_kernels.cpp  hipaVX_kernels.hpp
cpp_kernels/global/: eq_hist_u8_u8.hpp  integral_u32_u8.hpp  mean_std_dev_u8.hpp
cpp_kernels/local/: fast9_u8.hpp
cpp_kernels/point/: dosomething2_u8_u8.hpp  dosomething_u8_u8.hpp
doc/: CMakeLists.txt  Doxyfile.in
hipaVX/: abstractions.cpp  abstractions.hpp  ast.cpp  ast.hpp  config_reader.hpp  domVX_api.cpp  domVX_api.hpp  domVX_ast_compat.cpp  domVX_ast_compat.hpp  domVX_extensions.cpp  domVX_extensions.hpp  domVX_kernels.cpp  domVX_kernels.hpp  domVX_kernels_point.cpp  domVX_kernels_point.hpp  domVX_types.cpp  domVX_types.hpp  gen_template.cpp  gen_template.hpp  graph.hpp  hipaVX.cpp  hipaVX_extension.hpp  hipaVX_hipacc_generator.cpp  hipaVX_hipacc_generator.hpp  hipaVX_internal.cpp  hipaVX_internal.hpp  hipaVX_kernels.cpp  hipaVX_kernels.hpp  vx_adaptor.hpp  vx_api.cpp  vx_nodes.cpp
hipaVX/cpp_gen/: ast_gen.cpp  ast_gen.hpp  cpp_gen.cpp  cpp_gen.hpp
hipaVX/dsl/: abstractions.hpp  api.cpp  api.hpp  ast.cpp  ast.hpp  descriptors.hpp  types.cpp  types.hpp
hipaVX/graph/: graph.cpp  graph.hpp  graph_utils.hpp  graph_visitors.hpp
hipaVX/graph_gen/: cpp_gen.hpp  cpp_graph_gen.cpp  hipacc_graph_gen.hpp
hipaVX/hipacc_gen/: ast_gen.cpp  ast_gen.hpp  hipacc_gen.cpp  hipacc_gen.hpp  hipacc_main.template  node_gen.cpp  node_gen.hpp
hipaVX/kernels/: domVX_kernels.cpp  domVX_kernels.hpp  domVX_kernels_point.cpp  domVX_kernels_point.hpp  harris_corners.call
hipacc_compile_pass/: Makefile  hipacc_helper.hpp
hipacc_kernels/local/: box_u8_u8.hpp  convolve_s16_u8.hpp  convolve_u8_u8.hpp  dilate_u8_u8.hpp  erode_u8_u8.hpp  gaussian_u8_u8.hpp  median_u8_u8.hpp  nonmax_s16_s16.hpp  nonmax_u8_u8.hpp  sobelx_s16_u8.hpp  sobely_s16_u8.hpp
hipacc_kernels/point/: absdiff_s16_s16_s16.hpp  absdiff_s16_s16_u8.hpp  absdiff_s16_u8_s16.hpp  absdiff_s16_u8_u8.hpp  absdiff_u8_u8_u8.hpp  add_saturate_s16_s16_s16.hpp  add_saturate_s16_s16_u8.hpp  add_saturate_s16_u8_s16.hpp  add_saturate_s16_u8_u8.hpp  copy_f_f.hpp  (+41 more)
minimal/: CMakeLists.txt
minimal/abstractions/: CMakeLists.txt  local.cpp  map_change_input.cpp  map_sqrt.cpp  map_test.cpp
minimal/abstractions/global/: CMakeLists.txt  global_reduce.cpp
minimal/abstractions/local/: CMakeLists.txt  localop_at_and_reduce.cpp  localop_chained_all.cpp  localop_forall.cpp  localop_local_to_pixel.cpp  localop_mask_forall.cpp  localop_mean.cpp
minimal/abstractions/map/: map_change_in_out.cpp  map_simple.cpp  map_with_variable.cpp
minimal/examples/: CMakeLists.txt  cpp_gen_example.cpp  harris.cpp  sobel.cpp
minimal/generator/: CMakeLists.txt  for_every_pixel.cpp  map_change_input.cpp  map_sqrt.cpp  map_test.cpp  window.cpp
minimal/generator/global/: CMakeLists.txt  global_reduce.cpp
minimal/generator/local/: CMakeLists.txt  localop_at_and_reduce.cpp  localop_chained_all.cpp  localop_forall.cpp  localop_local_to_pixel.cpp  localop_mask_forall.cpp  localop_mean.cpp
minimal/generator/map/: CMakeLists.txt  map_change_in_out.cpp  map_simple.cpp  map_with_variable.cpp
minimal/graph/: 01_simple.cpp  02_gen_random.cpp  03_detect_cycles.cpp  04_gen_acyclic.cpp  05_reverse.cpp  06_dead_node_elimination.cpp  07_topological_sort.cpp  CMakeLists.txt  compile.sh  simple.cpp
samples/: CMakeLists.txt  gaussian.cpp  laplacian.cpp  multiply_node.cpp  sobel.cpp  teaser.cpp  test_all.cpp  tomasi.cpp
samples/gauss_sobel_mag_thresh/: CMakeLists.txt  gauss_sobel_mag_thresh.cpp
samples/gaussian/: CMakeLists.txt  gaussian.cpp
samples/laplacian/: CMakeLists.txt
samples/magnitude/: CMakeLists.txt  magnitude.cpp
samples/multiply/: CMakeLists.txt  multiply_node.cpp
samples/sobel/: CMakeLists.txt
samples/teaser/: CMakeLists.txt  teaser.cpp
samples/tomasi/: CMakeLists.txt  tomasi.cpp
samples/vxAbsDiffNode/: CMakeLists.txt  vxAbsDiffNode.cpp
samples/vxAddNode/: CMakeLists.txt  vxAddNode.cpp
samples/vxAndNode/: CMakeLists.txt  vxAndNode.cpp
samples/vxBox3x3Node/: CMakeLists.txt  vxBox3x3Node.cpp
samples/vxChannelCombineNode/: CMakeLists.txt  vxChannelCombineNode.cpp
samples/vxChannelExtractNode/: CMakeLists.txt  vxChannelExtractNode.cpp
samples/vxConvertDepthNode/: CMakeLists.txt  vxConvertDepthNode.cpp
samples/vxConvolveNode/: CMakeLists.txt  vxConvolveNode.cpp
samples/vxCopyNode/: CMakeLists.txt  vxCopyNode.cpp
samples/vxDilate3x3Node/: CMakeLists.txt  vxDilate3x3Node.cpp
samples/vxEqualizeHistNode/: CMakeLists.txt  vxEqualizeHistNode.cpp
samples/vxErode3x3Node/: CMakeLists.txt  vxErode3x3Node.cpp
samples/vxFastCornersNode/: CMakeLists.txt  vxFastCornersNode.cpp
samples/vxGaussian3x3Node/: CMakeLists.txt  vxGaussian3x3Node.cpp
samples/vxHarrisCornersNode/: CMakeLists.txt  vxHarrisCornersNode.cpp
samples/vxIntegralImageNode/: CMakeLists.txt  vxIntegralImageNode.cpp
samples/vxMagnitudeNode/: CMakeLists.txt  vxMagnitudeNode.cpp
samples/vxMeanStdDevNode/: CMakeLists.txt  vxMeanStdDevNode.cpp
samples/vxMedian3x3Node/: CMakeLists.txt  vxMedian3x3Node.cpp
samples/vxMultiplyNode/: CMakeLists.txt  vxMultiplyNode.cpp
samples/vxNonMaxSuppressionNode/: CMakeLists.txt  vxNonMaxSuppressionNode.cpp
samples/vxNotNode/: CMakeLists.txt  vxNotNode.cpp
samples/vxOrNode/: CMakeLists.txt  vxOrNode.cpp
samples/vxSobel3x3Node/: CMakeLists.txt  vxSobel3x3Node.cpp
samples/vxSubtractNode/: CMakeLists.txt  vxSubtractNode.cpp
samples/vxThresholdNode/: CMakeLists.txt  vxThresholdNode.cpp
samples/vxXorNode/: CMakeLists.txt  vxXorNode.cpp
tests/: CMakeLists.txt  MultiplyNode.cpp  gaussian.cpp  magnitude.cpp  test_all.cpp
tests/hipacc_interop/: BilateralFilter.cpp
(+100 files in other folders)
