include_directories(${ROOT_DIR})

add_subdirectory(gaussian)
add_subdirectory(laplacian)
add_subdirectory(magnitude)
add_subdirectory(multiply)
add_subdirectory(sobel)
add_subdirectory(teaser)
add_subdirectory(tomasi)

# get_directory_property(targets BUILDSYSTEM_TARGETS)
# foreach(TARGET_DEFINED ${targets})
# 	get_target_property(tmp ${TARGET_DEFINED} NAME)
# 	create_hipacc_version(${tmp})
# endforeach()
